--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
                 <h2>The Science Behind Genomics Testing</h2>
                 
                 <h3>The Problem Being Addressed</h3>
-                <p>Traditional genetic testing required expensive laboratory procedures, physician referrals, and specialized genetic counseling, creating barriers to accessing potentially life-saving genetic information. Direct-to-consumer (DTC) genetic testing emerged as a solution to democratize access to <span class="science-term">genomic data</span>, enabling individuals to proactively understand their health risks without medical gatekeepers <span class="citation">(Tandy-Connor et al., 2018)</span>.</p>
+                <p>Many people have used a DNA testing service such as 23andMe to determine their DNA and potentially health and medical risks they might have. Although this service does test your DNA, it is not reliable and will often times mislead people as they are based off of statistical associations not a confirmed medical diagnosis. A Lot of users walk away with flase information and certainty about health conditions that they may or may not have developed. This concern has also reached the FDA and has </span>.</p>
 
                 <h3>How the Technology Works</h3>
                 
