--- a/index.html
+++ b/index.html
@@ -399,28 +399,29 @@
                 <h2>The Science Behind Genomics Testing</h2>
                 
                 <h3>The Problem Being Addressed</h3>
-                <p>Many people have used a DNA testing service such as 23andMe to determine their DNA and potentially health and medical risks they might have. Although this service does test your DNA, it is not reliable and will often times mislead people as they are based off of statistical associations not a confirmed medical diagnosis. A Lot of users walk away with flase information and certainty about health conditions that they may or may not have developed. This concern has also reached the FDA and has </span>.</p>
+                <p>Many people have used a DNA testing service such as 23andMe to determine their DNA and potentially health and medical risks they might have. Although this service does test your DNA, it is not reliable and will often times mislead people as they are based off of statistical associations not a confirmed medical diagnosis. A Lot of users walk away with flase information and certainty about health conditions that they may or may not have developed. This concern has also reached the FDA and has also adressed this issue about the health related scan is inaccurate. </span>.</p>
 
                 <h3>How the Technology Works</h3>
                 
                 <div class="process-card">
-                    <h4>Step 1: DNA Extraction and Amplification</h4>
-                    <p>Upon receiving a saliva sample, laboratories extract <span class="science-term">deoxyribonucleic acid (DNA)</span> containing the individual's complete <span class="science-term">genome</span>—approximately 3 billion <span class="science-term">base pairs</span> of genetic information. Using <span class="science-term">polymerase chain reaction (PCR)</span>, scientists amplify specific regions to generate sufficient genetic material for analysis <span class="citation">(National Human Genome Research Institute, 2024)</span>.</p>
+                    <h4>Step 1: Sample Collection </h4>
+                    <p>A sample is collected from your body in order to get access to your DNA. This can be done through a saliva swab, blood draw, or cheek swab depending on the type of test being used. The sample contains your cells which hold your complete genetic information inside (Cleveland Clinic, 2023).
+</p>
                 </div>
 
                 <div class="process-card">
-                    <h4>Step 2: Genotyping via SNP Arrays</h4>
-                    <p>Rather than sequencing the entire genome, most DTC companies employ <span class="science-term">DNA microarray chips</span> that test for approximately 600,000 to 700,000 specific <span class="science-term">single nucleotide polymorphisms (SNPs)</span>. These represent common variations where a single <span class="science-term">nucleotide</span> (A, T, G, or C) differs between individuals. The microarray uses <span class="science-term">fluorescent probes</span> that bind to specific DNA sequences <span class="citation">(Mittelman, 2019)</span>.</p>
+                    <h4>Step 2: DNA Extraction</h4>
+                    <p>Once the sample reaches the lab scientists break open the collected cells to release the DNA inside. Your DNA contains your genes, chromosomes, and the chemical base pairs that carry your biological information and make you genetically unique from other people (Cleveland Clinic, 2023).</p>
                 </div>
 
                 <div class="process-card">
-                    <h4>Step 3: Bioinformatic Analysis</h4>
-                    <p>Sophisticated algorithms compare the individual's <span class="science-term">genotype</span> against reference databases. By identifying patterns of <span class="science-term">allele frequencies</span> and <span class="science-term">haplotypes</span>, the software generates risk assessments based on <span class="science-term">genome-wide association studies (GWAS)</span> that have linked specific variants to diseases and traits <span class="citation">(Regalado, 2019)</span>.</p>
+                    <h4>Step 3: Laboratory Analysis </h4>
+                    <p>Scientists examine the extracted DNA to look for any changes or variations in your genes and chromosomes. These variations are compared against known genetic patterns to identify anything that differs from what would typically be expected in a healthy genome (Cleveland Clinic, 2023).</p>
                 </div>
 
                 <div class="process-card">
-                    <h4>Step 4: Ancestry Determination</h4>
-                    <p>Ancestry analysis relies on identifying population-specific genetic markers and comparing chromosomal segments against reference populations from different geographic regions. The algorithms calculate ethnicity percentages through <span class="science-term">statistical modeling</span> of <span class="science-term">genetic recombination</span> patterns over generations.</p>
+                    <h4>Step 4: Results and Interpretation </h4>
+                    <p>The findings are compiled into a report that can indicate whether you carry any genetic variations linked to certain conditions or traits. Having a variation does not always mean you will develop a condition — results show possibility and risk, not certainty (Cleveland Clinic, 2023).</p>
                 </div>
             </div>
         </div>
@@ -471,6 +472,9 @@
 
 <div class="reference-item">
     World Health Organization. (2024, November 20). WHO releases new principles for ethical human genomic data collection and sharing. <em>WHO.</em> <a href="https://www.who.int/news/item/20-11-2024-who-releases-new-principles-for-ethical-human-genomic-data-collection-and-sharing" target="_blank">https://www.who.int/news/item/20-11-2024-who-releases-new-principles-for-ethical-human-genomic-data-collection-and-sharing</a>
+</div>
+ <div class="reference-item">
+    Clinic, C. (2023, September 8). DNA tests (gene testing). <em>Cleveland Clinic.</em> <a href="https://my.clevelandclinic.org/health/diagnostics/23065-dna-test--genetic-testing" target="_blank">https://my.clevelandclinic.org/health/diagnostics/23065-dna-test--genetic-testing</a>
 </div>
                 </div>
             </div>
